webpack 処理を追加

--- a/views/index.html
+++ b/views/index.html
@@ -11,5 +11,5 @@ result=<span id="result">Hoge</span>
 
 
     <script type="text/javascript" src="/js/jquery/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="/dist/aho.js"></script>
+    <script type="text/javascript" src="/dist/index.bundle.js"></script>
 </body>
