--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,19 @@
     <title>TestTypeScript</title>
 </head>
 <body>
-    <h1>TestTypescirpt</h1>
-    result=<span id="result">Hoge</span>
+    <nav class="navbar navbar-expand-1g navbar-dark bg-info"> <!--  fixed-top -->
+        <a class="navbar-brand" href="/">testTypeScript</a>
+    </nav>
+
+    <div class="container-fluid">
+        <div class="pt-1 pb-5">
+            <div class="p-3">
+                result=<span id="result">Hoge</span>
+            </div>
+        </div>
+    </div>
+    
+    
 
     <script type="text/javascript" src="/dist/index.bundle.js"></script>
 </body>
