依存tsファイルでjQueryを使用したときの挙動を確認

--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>TestTypescirpt</h1>
     result=<span id="result">Hoge</span>
+    <p />
+    result2=<span id="result2">Hoge</span>
 
     <script type="text/javascript" src="/dist/index.bundle.js"></script>
 </body>
