--- a/views/index.html
+++ b/views/index.html
@@ -18,5 +18,5 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/dist/index.bundle.js"></script>
+    <script type="text/javascript" src="{{frontEndUrl}}/index.bundle.js"></script>
 </body>
